Beautify templates/html

--- a/app/views/base/base.html
+++ b/app/views/base/base.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		{{template "base/head.html" .}}
-	</head>
-	<body>
-		{{template "base/nav.html" .}}
-		{{template "body" .}}
-	</body>
+
+<head>
+	{{template "base/head.html" .}}
+</head>
+
+<body>
+	{{template "base/nav.html" .}} {{template "body" .}}
+</body>
+
 </html>
