--- a/app/views/base/nav.html
+++ b/app/views/base/nav.html
@@ -30,9 +30,9 @@
       <h5>Admin</h5>
       <ul>
         <li>
-          <a href="/settings">
-            <i class="fa fa-sliders"></i>
-            <span>Settings</span>
+          <a href="/logs">
+            <i class="fa fa-history"></i>
+            <span>Logs</span>
           </a>
         </li>
         <li id="repositories">
