Added about page

--- a/app/views/base/nav.html
+++ b/app/views/base/nav.html
@@ -42,9 +42,9 @@
           </a>
         </li>
         <li>
-          <a href="https://github.com/snagles/docker-registry-manager">
+          <a href="/about">
             <i class="fa fa-question-circle"></i>
-            <span>Documentation</span>
+            <span>About</span>
           </a>
         </li>
       </ul>
